Fixed the dependencies.

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,8 @@
 
 {deps_dir, ["deps"]}.
 
-{deps, [{eastrisk, ".*", {git, "git://github.com/schemeway/eastrisk.git", "master"}},
-        {couchbeam, ".*", {git, "http://github.com/benoitc/couchbeam.git/", "master"}},
-        {mochiweb, ".*", {git, "http://github.com/mochi/mochiweb.git", "1.5.2"}}]}.
+{deps, [{eastrisk, ".*", {git, "http://github.com/schemeway/eastrisk.git", "master"}},
+        {couchbeam, ".*", {git, "http://github.com/benoitc/couchbeam.git", "master"}},
+        {mochiweb, ".*", {git, "http://github.com/mochi/mochiweb.git", {tag, "1.5.2"}}}]}.
 
 {sub_dirs, ["rel"]}.
