ibrowse is now started automatically.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -5,6 +5,7 @@
          kernel,
          stdlib,
          sasl,
+         ibrowse,
          ast_console
         ]},
        {rel, "start_clean", "",
